--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/nada.jpeg" alt="" />
+										<img src="images/Profile.jpg" alt="" />
 									</span>
 								</section>
 
