--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/Profile.jpg" style="max-width:50%; height: auto;" />
+										<p align = "right"> <img src="images/Profile.jpg" style="max-width:50%; height: auto;"/></p>
 									</span>
 								</section>
 
