--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
 											</article>
 										</div>
 									</section>	
- 				<!--DJ Section -->
+ 						<!--DJ Section -->
+							<section>
 								<h2>Domestic Journal</h2>
 							</header>
 							<div class="posts">
