--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<p align = "right"> <img src="images/Profile.jpg" style="max-width:50%; height: auto;"/></p>
+										<img src="images/Profile.jpg" alt="" />
 									</span>
 								</section>
 
@@ -310,7 +310,47 @@
 												</ul>
 											</article>
 										</div>
-									</section>
+									</section>	
+ 						<!--DJ Section -->
+							<section>
+								<h2>Domestic Journal</h2>
+							</header>
+							<div class="posts">
+								<article>
+									<a href="https://www.koreascience.or.kr/article/JAKO201616556377467.page" target="_blank" class="image"><img src="images/2016kiise.jpg" alt="" /></a>
+									<h3>A Study on Visualization Methods of Semantic Clustering for Multidimensional data</h3>
+									<p><strong>Hyoji Ha</strong>, Hyunwoo Han, Sungyun Bae, Jihye Lee, Sangjoon Son, Changhyung Hong, Hyunjung Shin and Kyungwon Lee. Journal of Communications of KIISE, 34(11). (November 2016):51-61.</p>
+									<ul class="actions">
+										<li><a href="files/2016kiise.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE06683800" target="_blank" class="image"><img src="images/2016jkci.jpg" alt="" /></a>
+									<h3>Visualization of movie recommendation system using the sentimental vocabulary distribution map</h3>
+									<p><strong>Hyoji Ha</strong>, Hyunwoo Han, Seongmin Mun, Sungyun Bae, Jihye Lee and Kyungwon Lee. Journal of the Korea Society of Computer and Information, 21(5). (May 2016):19-29.</p>
+									<ul class="actions">
+										<li><a href="files/2016jkci.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865993" target="_blank" class="image"><img src="images/2015dcs.jpg" alt="" /></a>
+									<h3>Proximity based Circular Visualization for similarity analysis of voting patterns between nations in UN General Assembly</h3>
+									<p>Hanmin Choi, Seongmin Mun, <strong>Hyoji Ha</strong> and Kyungwon Lee. Design convergence study, 14(4). (August 2015):133-150. </p>
+									<ul class="actions">
+										<li><a href="files/2015dcs.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865998" target="_blank" class="image"><img src="images/2015dcs2.jpg" alt="" /></a>
+									<h3>Relationship Analysis between the Box Office Performance and Sentimental Words in Movie Review</h3>
+									<p>Seongmin Mun, <strong>Hyoji Ha</strong> and Kyungwon Lee. Design convergence study, 14(4). (August 2015):1-16. </p>
+									<ul class="actions">
+										<li><a href="files/2015dcs2.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+							</div>
+						</section>
+
 						</div>
 					</div>
 
