--- a/index.html
+++ b/index.html
@@ -348,6 +348,22 @@
 										<li><a href="files/2015dcs2.pdf" target="_blank" class="button">Download PDF</a></li>
 									</ul>
 								</article>
+									<article>
+									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865974" target="_blank" class="image"><img src="images/2014dcs.jpg" alt="" /></a>
+									<h3>A Visual Analysis on Factors Affecting Repurchase Intention in Social Commerce -Focused on Group-buying Social Commerce-</h3>
+									<p>Seongmin Mun, Hyunwoo Han <strong>Hyoji Ha</strong> and Kyungwon Lee. Design convergence study, 13(6). (December 2014):137-152. </p>
+									<ul class="actions">
+										<li><a href="files/2014dcs.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE02500530" target="_blank" class="image"><img src="images/2014hci.jpg" alt="" /></a>
+									<h3>A news visualization based on an algorithm by journalistic values</h3>
+									<p>Daemin Park, Gi-Nam Kim, Nam-Yong Kang, Bongwon Suh, <strong>Hyoji Ha</strong> and Byung-Won On. Journal of the HCI Korea Society, 9(2). (November 2014): 5-12. </p>
+									<ul class="actions">
+										<li><a href="files/2014hci.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
 							</div>
 						</section>
 
