--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -359,9 +358,17 @@
 								<article>
 									<a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE02500530" target="_blank" class="image"><img src="images/2014hci.jpg" alt="" /></a>
 									<h3>A news visualization based on an algorithm by journalistic values</h3>
-									<p>Daemin Park, Gi-Nam Kim, Nam-Yong Kang, Bongwon Suh, <strong>Hyoji Ha</strong> and Byung-Won On. Journal of the HCI Korea Society, 9(2). (November 2014): 5-12. </p>
+									<p>Daemin Park, Ginam Kim, Nam-Yong Kang, Bongwon Suh, <strong>Hyoji Ha</strong> and Byung-Won On. Journal of the HCI Korea Society, 9(2). (November 2014): 5-12. </p>
 									<ul class="actions">
 										<li><a href="files/2014hci.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE02333638" target="_blank" class="image"><img src="images/2013dcs.jpg" alt="" /></a>
+									<h3>A Study on Analysis of Affective Words in Movie Reviews and the Situation of Watching Movies”</h3>
+									<p><strong>Hyoji Ha</strong> Ginam Kim and Kyungwon Lee. Design convergence study, 12(6). (December 2013):17-32. </p>
+									<ul class="actions">
+										<li><a href="files/2013dcs.pdf" target="_blank" class="button">Download PDF</a></li>
 									</ul>
 								</article>
 							</div>
