--- a/index.html
+++ b/index.html
@@ -312,9 +312,10 @@
 									</section>	
  						<!--DJ Section -->
 							<section>
-								<h2>Domestic Journal</h2>
-							</header>
-							<div class="posts">
+									<header class="major">
+										<h2>Domestic Journal</h2>
+									</header>
+									<div class="posts">
 								<article>
 									<a href="https://www.koreascience.or.kr/article/JAKO201616556377467.page" target="_blank" class="image"><img src="images/2016kiise.jpg" alt="" /></a>
 									<h3>A Study on Visualization Methods of Semantic Clustering for Multidimensional data</h3>
