--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 									</ul>
 								</article>
 								<article>
-									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865993" target="_blank" class="image"><img src="images/2015dcs.jpg" alt="" /></a>
+									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865993" target="_blank" class="image"><img src="images/2015dcs_bb.jpg" alt="" /></a>
 									<h3>Proximity based Circular Visualization for similarity analysis of voting patterns between nations in UN General Assembly</h3>
 									<p>Hanmin Choi, Seongmin Mun, <strong>Hyoji Ha</strong> and Kyungwon Lee. Design convergence study, 14(4). (August 2015):133-150. </p>
 									<ul class="actions">
