--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>Ph.D. Candidate in Life Media Interdisciplinary Program</h3>
-												<p>Graduate School, Ajou University, South Korea (2013~)</p>
+												<p>Graduate School, Ajou University, South Korea (2013~2022)</p>
 											</div>
 										</article>
 										<article>
