--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="https://www.mdpi.com/2076-3417/12/6/2952" target="_blank" class="image"><img src="images/topicseg_journal.jpg" alt="" /></a>
+											<h3>Using Conceptual Recurrence and Consistency Metrics for Topic Segmentation in Debate</h3>
+											<p>Jaejong Ho, <strong>Hyoji Ha</strong>, Seok-Won Lee and Kyungwon Lee. Applied Sciences(SCIE), 12(6). (March 2022):2952.</p>
+											<ul class="actions">
+												<li><a href="files/applsci_TopicSegVis.pdf" target="_blank" class="button">Download PDF</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://www.mdpi.com/2076-3417/10/13/4579" target="_blank" class="image"><img src="images/logotrend_journal.jpg" alt="" /></a>
 											<h3>A Visualization System for Exploring Logo Trend and Design Shape Patterns</h3>
 											<p><strong>Hyoji Ha</strong>, Hyunwoo Han and Kyungwon Lee. Applied Sciences(SCIE,SCOPUS), 10(13). (July 2020):4579.</p>
