--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://www.mdpi.com/2076-3417/12/6/2952" target="_blank" class="image"><img src="images/topicseg_journal.jpg" alt="" /></a>
+											<a href="https://www.mdpi.com/2076-3417/12/6/2952" target="_blank" class="image"><img src="images/topicseg_journal_new.jpg" alt="" /></a>
 											<h3>Using Conceptual Recurrence and Consistency Metrics for Topic Segmentation in Debate</h3>
 											<p>Jaejong Ho, <strong>Hyoji Ha</strong>, Seok-Won Lee and Kyungwon Lee. Applied Sciences(SCIE), 12(6). (March 2022):2952.</p>
 											<ul class="actions">
