--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 										<article>
 											<a href="https://www.mdpi.com/2076-3417/10/13/4579" target="_blank" class="image"><img src="images/logotrend_journal.jpg" alt="" /></a>
 											<h3>A Visualization System for Exploring Logo Trend and Design Shape Patterns</h3>
-											<p><strong>Hyoji Ha</strong>, Hyunwoo Han and Kyungwon Lee. Applied Sciences(SCIE,SCOPUS), 10(13). (July 2020):4579.</p>
+											<p><strong>Hyoji Ha</strong>, Hyunwoo Han and Kyungwon Lee. Applied Sciences(SCIE), 10(13). (July 2020):4579.</p>
 											<ul class="actions">
 												<li><a href="files/applsci-logo.pdf" target="_blank" class="button">Download PDF</a></li>
 											</ul>
@@ -156,7 +156,7 @@
 										<article>
 											<a href="https://www.mdpi.com/1660-4601/16/18/3438" target="_blank" class="image"><img src="images/credosvis_journal.jpg" alt="" /></a>
 											<h3>Dementia Patient Segmentation Using EMR Data Visualization: A Design Study</h3>
-											<p><strong>Hyoji Ha</strong>, Jihye Lee, Hyunwoo Han, Sungyun Bae, Sangjoon Son, Changhyung Hong, Hyunjung Shin and Kyungwon Lee. International Journal of Environmental Research and Public Health(SCIE,SSCI,MEDLINE,SCOPUS), 16(18). (September 2019):3438.</p>
+											<p><strong>Hyoji Ha</strong>, Jihye Lee, Hyunwoo Han, Sungyun Bae, Sangjoon Son, Changhyung Hong, Hyunjung Shin and Kyungwon Lee. International Journal of Environmental Research and Public Health(SCIE,SSCI,MEDLINE), 16(18). (September 2019):3438.</p>
 											<ul class="actions">
 												<li><a href="files/ijerph-credosvis.pdf" target="_blank" class="button">Download PDF</a></li>
 												<li><a href="https://www.youtube.com/watch?v=0ZRbW26E6mc" target="_blank" class="button">Video</a></li>
@@ -165,7 +165,7 @@
 										<article>
 											<a href="https://www.mdpi.com/2076-3417/9/12/2419" target="_blank" class="image"><img src="images/cosmovis_journal.jpg" alt="" /></a>
 											<h3>An Improved Study of Multilevel Semantic Network Visualization for Analyzing Sentiment Word of Movie Review Data</h3>
-											<p><strong>Hyoji Ha</strong>, Hyunwoo Han, Seongmin Mun, Sungyun Bae, Jihye Lee and Kyungwon Lee. Applied Sciences(SCIE,SCOPUS), 9(12). (June 2019):2419.</p>
+											<p><strong>Hyoji Ha</strong>, Hyunwoo Han, Seongmin Mun, Sungyun Bae, Jihye Lee and Kyungwon Lee. Applied Sciences(SCIE), 9(12). (June 2019):2419.</p>
 											<ul class="actions">
 												<li><a href="files/applsci_cosmovis.pdf" target="_blank" class="button">Download PDF</a></li>
 											</ul>
