--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="http://www.aodr.org/_common/do.php?a=current&b=91&bidx=2949&aidx=33136" target="_blank" class="image"><img src="images/journal_adr_2205.jpg" alt="" /></a>
+											<h3>Constructing a Taxonomy for Sentiment Visualization Analysis Using Visual Metaphors</h3>
+											<p><strong>Hyoji Ha</strong>, Hyerim Joung, Kwanghyuk Moon and Kyungwon Lee. Archives of Design Research(SCOPUS), 42(2). (May 2022):181-207.</p>
+											<ul class="actions">
+												<li><a href="files/adr33136.pdf" target="_blank" class="button">Download PDF</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://www.mdpi.com/2076-3417/12/6/2952" target="_blank" class="image"><img src="images/topicseg_journal_new.jpg" alt="" /></a>
 											<h3>Using Conceptual Recurrence and Consistency Metrics for Topic Segmentation in Debate</h3>
 											<p>Jaejong Ho, <strong>Hyoji Ha</strong>, Seok-Won Lee and Kyungwon Lee. Applied Sciences(SCIE), 12(6). (March 2022):2952.</p>
