--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="http://www.aodr.org/_common/do.php?a=current&b=91&bidx=2949&aidx=33136" target="_blank" class="image"><img src="images/journal_adr_2205.jpg" alt="" /></a>
+											<a href="http://www.aodr.org/_common/do.php?a=current&b=91&bidx=2949&aidx=33136" target="_blank" class="image"><img src="images/journal_adr_2205.png" alt="" /></a>
 											<h3>Constructing a Taxonomy for Sentiment Visualization Analysis Using Visual Metaphors</h3>
 											<p><strong>Hyoji Ha</strong>, Hyerim Joung, Kwanghyuk Moon and Kyungwon Lee. Archives of Design Research(SCOPUS), 35(2). (May 2022):181-207.</p>
 											<ul class="actions">
