--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 									<div class="content">
 										<header>
 											<h1>Hyoji Ha</h1>
-											<p>Ph.D. Candidate, Life-Media Interdisciplinary Program Assistant Research Engineer,Integrated Design Lab, Ajou University.</p>
+											<p>Ph.D., Life-Media Interdisciplinary Program Research Engineer,Integrated Design Lab, Ajou University.</p>
 										</header>
 										<p>
 											 <strong>Address:</strong> 206 Worldcup-ro, Yeongtong-gu,</br>
@@ -119,7 +119,7 @@
 											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>Ph.D. Candidate in Life Media Interdisciplinary Program</h3>
-												<p>Graduate School, Ajou University, South Korea (2013~2022)</p>
+												<p>Graduate School, Ajou University, South Korea (2013.09~2023.02)</p>
 											</div>
 										</article>
 										<article>
@@ -138,6 +138,14 @@
 										<h2>International Journal</h2>
 									</header>
 									<div class="posts">
+										<article>
+											<a href="https://www.sciencedirect.com/science/article/pii/S1071581922001446?casa_token=hVpiFFsSyNUAAAAA:GMO3lBp92PxHQIhgNTJ4_9mHSqGcoxnG_kGmaXTRPsjRHeHNmy1z5ohDRjPHMaYXTFJKU_Q3sHM" target="_blank" class="image"><img src="images/journal_ijhcs_2301.jpg" alt="" /></a>
+											<h3>Improving user experience of color palette extraction by using interactive visualization based on hierarchical color model</h3>
+											<p>Raja Mubashar Karim, Taehong Jeong, <strong>Hyoji Ha</strong>, Jaejong Ho, Kyungwon Lee and Hyun Joon Shin. International Journal of Human-Computer Studies(SCIE), 169. (January 2023):102924.</p>
+											<ul class="actions">
+												<li><a href="files/improving user.pdf" target="_blank" class="button">Download PDF</a></li>
+											</ul>
+										</article>
 										<article>
 											<a href="http://www.aodr.org/_common/do.php?a=current&b=91&bidx=2949&aidx=33136" target="_blank" class="image"><img src="images/journal_adr_2205.jpg" alt="" /></a>
 											<h3>Constructing a Taxonomy for Sentiment Visualization Analysis Using Visual Metaphors</h3>
