--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@
 										</header>
 										<div class="posts">
 											<article>
+												<a href="https://ieeexplore.ieee.org/abstract/document/9966401" target="_blank" class="image"><img src="images/metaphorvis.jpg" alt="" /></a>
+												<h3>Exploration Tool for Effectively Interpreting the Visual Metaphor Process of Sentiment Visualization</h3>
+												<p><strong>Hyoji Ha</strong>, Kwanghyuk Moon, Hyerim Joung, Hyegyeong Kim and Kyungwon Lee. Poster Abstract, IEEE VIS2022. IEEE (October, 2022) </p>
+												<ul class="actions">
+													<li><a href="files/Exploration_Tool_for_Effectively_Interpreting_the_Visual_Metaphor_Process_of_Sentiment_Visualization.pdf" target="_blank" class="button">Download PDF</a></li>
+													<li><a href="https://youtu.be/AaiteBslPHA" target="_blank" class="button">Video</a></li>
+												</ul>
+											</article>
+											<article>
 												<a href="https://vis2020-ieee.ipostersessions.com/default.aspx?s=FA-AC-54-0E-99-0A-E7-8D-9C-BB-13-13-B8-60-24-81" target="_blank" class="image"><img src="images/taxonomy_conference.jpg" alt="" /></a>
 												<h3>A Taxonomy of Visualization Research Cases of Sentiment Analysis Data based on Visual Metaphors</h3>
 												<p><strong>Hyoji Ha</strong> and Kyungwon Lee. Poster Abstract, IEEE VIS2020. IEEE (October, 2020) </p>
