--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
 									</header>
 									<div class="posts">
 										<article>
+												<a href="https://ieeexplore.ieee.org/abstract/document/9966401" target="_blank" class="image"><img src="images/metaphorvis.jpg" alt="" /></a>
+												<h3>Exploration Tool for Effectively Interpreting the Visual Metaphor Process of Sentiment Visualization</h3>
+												<p><strong>Hyoji Ha</strong>, Kwanghyuk Moon, Hyerim Joung, Hyegyeong Kim and Kyungwon Lee. Poster Abstract, IEEE VIS2022. IEEE (October, 2022) </p>
+												<ul class="actions">
+													<li><a href="files/Exploration_Tool_for_Effectively_Interpreting_the_Visual_Metaphor_Process_of_Sentiment_Visualization.pdf" target="_blank" class="button">Download PDF</a></li>
+													<li><a href="https://youtu.be/AaiteBslPHA" target="_blank" class="button">Video</a></li>
+												</ul>
+										</article>
+										<article>
 											<a href="https://www.sciencedirect.com/science/article/pii/S1071581922001446?casa_token=hVpiFFsSyNUAAAAA:GMO3lBp92PxHQIhgNTJ4_9mHSqGcoxnG_kGmaXTRPsjRHeHNmy1z5ohDRjPHMaYXTFJKU_Q3sHM" target="_blank" class="image"><img src="images/journal_ijhcs_2301.jpg" alt="" /></a>
 											<h3>Improving user experience of color palette extraction by using interactive visualization based on hierarchical color model</h3>
 											<p>Raja Mubashar Karim, Taehong Jeong, <strong>Hyoji Ha</strong>, Jaejong Ho, Kyungwon Lee and Hyun Joon Shin. International Journal of Human-Computer Studies(SCIE), 169. (January 2023):102924.</p>
