--- a/index.html
+++ b/index.html
@@ -62,6 +62,34 @@
 										<article>
 											<span class="icon solid fa-flask"></span>
 											<div class="content">
+												<h3>Postdoctoral researcher</h3>
+												<p>Graduate School of Metaverse, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-grin-wink"></span>
+											<div class="content">
+												<h3>Co-I in MSIT(Ministry of Science and ICT), Korea, under the ITRC(Information Technology Research Center) support program supervised by the IITP(Institute for Information & Communications Technology Planning & Evaluation)</h3>
+												<p>Development of Open Platform Technology for Web 3.0, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-grin-wink"></span>
+											<div class="content">
+												<h3>Research Associate in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
+												<p>Immersive Multi-dimensional Data Visualization based on Extended Reality, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-grin-wink"></span>
+											<div class="content">
+												<h3>Research Associate in Ministry of Science and Technology</h3>
+												<p>Metaverse Convergence Graduate School Support Project, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-flask"></span>
+											<div class="content">
 												<h3>Technical Research Personnel</h3>
 												<p>Alternative Military Service, Ajou University, South Korea (2019~2022)</p>
 											</div>
@@ -118,7 +146,7 @@
 										<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
-												<h3>Ph.D. Candidate in Life Media Interdisciplinary Program</h3>
+												<h3>Ph.D. in Life Media Interdisciplinary Program</h3>
 												<p>Graduate School, Ajou University, South Korea (2013.09~2023.02)</p>
 											</div>
 										</article>
