--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 									<div class="content">
 										<header>
 											<h1>Hyoji Ha</h1>
-											<p>Ph.D., Life-Media Interdisciplinary Program Research Engineer,Integrated Design Lab, Ajou University.</p>
+											<p>Postdoctoral researcher, Graduate School of Metaverse, Sogang University.</p>
 										</header>
 										<p>
-											 <strong>Address:</strong> 206 Worldcup-ro, Yeongtong-gu,</br>
-											 Suwon, 16499, South Korea</br>
-											 <strong>Phone:</strong> 82-31-219-1822 Mobile: 82-10-3760-3972</br>
-											 <strong>E-mail:</strong> hjha0508@ajou.ac.kr / hyojie@gmail.com</p>
+											 <strong>Address:</strong> 402  Arupe Hall, 35, Baekbeom-ro, Mapo-gu,</br>
+											 Seoul, Republic of Korea, 04107</br>
+											 <strong>Phone:</strong> 070.7736.3765 Mobile: 82-10-3760-3972</br>
+											 <strong>E-mail:</strong> hjha0508@sogang.ac.kr / hyojie@gmail.com</p>
+
 
 										<ul class="actions">
 											<li><a href="Hyoji Ha_CV.pdf" class="button big">CV</a></li>
@@ -74,14 +75,14 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-grin-wink"></span>
+											<span class="icon solid fa-flask"></span>
 											<div class="content">
 												<h3>Research Associate in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
 												<p>Immersive Multi-dimensional Data Visualization based on Extended Reality, Sogang University, South Korea (2023~)</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-grin-wink"></span>
+											<span class="icon solid fa-flask"></span>
 											<div class="content">
 												<h3>Research Associate in Ministry of Science and Technology</h3>
 												<p>Metaverse Convergence Graduate School Support Project, Sogang University, South Korea (2023~)</p>
