--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
 								</header>
 
 	<!-- Banner -->
-								<section id="banner">
+							<section id="banner">
 									<div class="content">
 										<header>
 											<h1>Hyoji Ha</h1>
-											<p>Ph.D., Life-Media Interdisciplinary Program Research Engineer,Integrated Design Lab, Ajou University.</p>
+											<p>Postdoctoral researcher, Graduate School of Metaverse, Sogang University.</p>
 										</header>
 										<p>
-											 <strong>Address:</strong> 206 Worldcup-ro, Yeongtong-gu,</br>
-											 Suwon, 16499, South Korea</br>
-											 <strong>Phone:</strong> 82-31-219-1822 Mobile: 82-10-3760-3972</br>
-											 <strong>E-mail:</strong> hjha0508@ajou.ac.kr / hyojie@gmail.com</p>
+											 <strong>Address:</strong> 402  Arupe Hall, 35, Baekbeom-ro, Mapo-gu,</br>
+											 Seoul, Republic of Korea, 04107</br>
+											 <strong>Phone:</strong> 070.7736.3765 Mobile: 82-10-3760-3972</br>
+											 <strong>E-mail:</strong> hjha0508@sogang.ac.kr / hyojie@gmail.com</p>
+
 
 										<ul class="actions">
 											<li><a href="Hyoji Ha_CV.pdf" class="button big">CV</a></li>
@@ -58,6 +59,34 @@
 										<h2>Background & Research Career</h2>
 									</header>
 									<div class="features">
+										<article>
+											<span class="icon solid fa-flask"></span>
+											<div class="content">
+												<h3>Postdoctoral researcher</h3>
+												<p>Graduate School of Metaverse, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-grin-wink"></span>
+											<div class="content">
+												<h3>Co-I in MSIT(Ministry of Science and ICT), Korea, under the ITRC(Information Technology Research Center) support program supervised by the IITP(Institute for Information & Communications Technology Planning & Evaluation)</h3>
+												<p>Development of Open Platform Technology for Web 3.0, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-flask"></span>
+											<div class="content">
+												<h3>Research Associate in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
+												<p>Immersive Multi-dimensional Data Visualization based on Extended Reality, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-flask"></span>
+											<div class="content">
+												<h3>Research Associate in Ministry of Science and Technology</h3>
+												<p>Metaverse Convergence Graduate School Support Project, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
 										<article>
 											<span class="icon solid fa-flask"></span>
 											<div class="content">
@@ -117,7 +146,7 @@
 										<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
-												<h3>Ph.D. Candidate in Life Media Interdisciplinary Program</h3>
+												<h3>Ph.D. in Life Media Interdisciplinary Program</h3>
 												<p>Graduate School, Ajou University, South Korea (2013.09~2023.02)</p>
 											</div>
 										</article>
