--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-grin-wink"></span>
+											<span class="icon solid fa-flask"></span>
 											<div class="content">
 												<h3>Co-I in MSIT(Ministry of Science and ICT), Korea, under the ITRC(Information Technology Research Center) support program supervised by the IITP(Institute for Information & Communications Technology Planning & Evaluation)</h3>
 												<p>Development of Open Platform Technology for Web 3.0, Sogang University, South Korea (2023~)</p>
@@ -85,6 +85,13 @@
 											<div class="content">
 												<h3>Research Associate in Ministry of Science and Technology</h3>
 												<p>Metaverse Convergence Graduate School Support Project, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-chalkboard-teacher"></span>
+											<div class="content">
+												<h3>[Graphic Design] Lecturer</h3>
+												<p>Department of Digital Media, Ajou University, South Korea (2022)</p>
 											</div>
 										</article>
 										<article>
