--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon solid fa-flask"></span>
+											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>Postdoctoral researcher</h3>
 												<p>Graduate School of Metaverse, Sogang University, South Korea (2023~)</p>
@@ -151,7 +151,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-university"></span>
+											<span class="icon solid fa-graduation-cap"></span>
 											<div class="content">
 												<h3>Ph.D. in Life Media Interdisciplinary Program</h3>
 												<p>Graduate School, Ajou University, South Korea (2013.09~2023.02)</p>
