--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 									</span>
 								</section>
 
-							<!-- Section -->
+				<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Background & Research Career</h2>
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon solid fa-flask"></span>
+											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>Postdoctoral researcher</h3>
 												<p>Graduate School of Metaverse, Sogang University, South Korea (2023~)</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-grin-wink"></span>
+											<span class="icon solid fa-flask"></span>
 											<div class="content">
 												<h3>Co-I in MSIT(Ministry of Science and ICT), Korea, under the ITRC(Information Technology Research Center) support program supervised by the IITP(Institute for Information & Communications Technology Planning & Evaluation)</h3>
 												<p>Development of Open Platform Technology for Web 3.0, Sogang University, South Korea (2023~)</p>
@@ -86,6 +86,13 @@
 											<div class="content">
 												<h3>Research Associate in Ministry of Science and Technology</h3>
 												<p>Metaverse Convergence Graduate School Support Project, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-chalkboard-teacher"></span>
+											<div class="content">
+												<h3>[Graphic Design] Lecturer</h3>
+												<p>Department of Digital Media, Ajou University, South Korea (2022)</p>
 											</div>
 										</article>
 										<article>
@@ -145,7 +152,7 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-university"></span>
+											<span class="icon solid fa-graduation-cap"></span>
 											<div class="content">
 												<h3>Ph.D. in Life Media Interdisciplinary Program</h3>
 												<p>Graduate School, Ajou University, South Korea (2013.09~2023.02)</p>
@@ -160,6 +167,7 @@
 										</article>
 									</div>
 								</section>
+
 
 							<!-- IJ Section -->
 								<section>
