--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 										<p>
 											 <strong>Address:</strong> 402  Arupe Hall, 35, Baekbeom-ro, Mapo-gu,</br>
 											 Seoul, Republic of Korea, 04107</br>
-											 <strong>Phone:</strong> 070.7736.3765 Mobile: 82-10-3760-3972</br>
+											 <strong>Phone:</strong> 070.7736.3765 <strong>Mobile:</strong> 82-10-3760-3972</br>
 											 <strong>E-mail:</strong> hjha0508@sogang.ac.kr / hyojie@gmail.com</p>
 
 
