--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 										<article>
 											<span class="icon solid fa-flask"></span>
 											<div class="content">
+												<h3>Co-I in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
+												<p>Research on the development direction of police metaverse platform for digital scientific policing, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-flask"></span>
+											<div class="content">
 												<h3>Co-I in MSIT(Ministry of Science and ICT), Korea, under the ITRC(Information Technology Research Center) support program supervised by the IITP(Institute for Information & Communications Technology Planning & Evaluation)</h3>
 												<p>Development of Open Platform Technology for Web 3.0, Sogang University, South Korea (2023~)</p>
 											</div>
