--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
 										<article>
 											<span class="icon solid fa-flask"></span>
 											<div class="content">
+												<h3>Co-I in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
+												<p>Research on the development direction of police metaverse platform for digital scientific policing, Sogang University, South Korea (2023~)</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-flask"></span>
+											<div class="content">
 												<h3>Research Associate in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
 												<p>Immersive Multi-dimensional Data Visualization based on Extended Reality, Sogang University, South Korea (2023~)</p>
 											</div>
