--- a/index.html
+++ b/index.html
@@ -183,6 +183,15 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="https://journals.sagepub.com/doi/10.1177/14738716241228593" target="_blank" class="image"><img src="images/metaphorvis.jpg" alt="" /></a>
+											<h3>An exploration system to effectively analyze the visual metaphor used in sentiment visualization</h3>
+											<p><strong>Hyoji Ha</strong>, Kwanghyuk Moon, Hyerim Joung, Hyegyeong Kim and Kyungwon Lee. Information Visualization(SCIE), 169. (February 2024):102924.</p>
+											<ul class="actions">
+												<li><a href=" https://github.com/hm00081/metaphorVis" target="_blank" class="button">System Link</a></li>
+												<li><a href="https://www.youtube.com/watch?v=XLNXB8RLWTI" target="_blank" class="button">Video</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://www.sciencedirect.com/science/article/pii/S1071581922001446?casa_token=hVpiFFsSyNUAAAAA:GMO3lBp92PxHQIhgNTJ4_9mHSqGcoxnG_kGmaXTRPsjRHeHNmy1z5ohDRjPHMaYXTFJKU_Q3sHM" target="_blank" class="image"><img src="images/journal_ijhcs_2301.jpg" alt="" /></a>
 											<h3>Improving user experience of color palette extraction by using interactive visualization based on hierarchical color model</h3>
 											<p>Raja Mubashar Karim, Taehong Jeong, <strong>Hyoji Ha</strong>, Jaejong Ho, Kyungwon Lee and Hyun Joon Shin. International Journal of Human-Computer Studies(SCIE), 169. (January 2023):102924.</p>
@@ -248,6 +257,14 @@
 											<h2>International Conference</h2>
 										</header>
 										<div class="posts">
+											<article>
+												<a href="https://content.ieeevis.org/year/2023/poster_v-vis-posters-1094.html" target="_blank" class="image"><img src="images/debatevis.jpg" alt="" /></a>
+												<h3>Towards Better Understanding: Proposing Effective Visualization Methods for Analyzing Argument in Debate</h3>
+												<p>Kwanghyuk Moon, <strong>Hyoji Ha</strong> and Kyungwon Lee. Poster Abstract, IEEE VIS2023. IEEE (October, 2023) </p>
+												<ul class="actions">
+													<li><a href="debatevis.pdf" target="_blank" class="button">Download PDF</a></li>
+												</ul>
+											</article>
 											<article>
 												<a href="https://ieeexplore.ieee.org/abstract/document/9966401" target="_blank" class="image"><img src="images/metaphorvis.jpg" alt="" /></a>
 												<h3>Exploration Tool for Effectively Interpreting the Visual Metaphor Process of Sentiment Visualization</h3>
