--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 										</header>
 										<div class="posts">
 											<article>
-												<a href="https://content.ieeevis.org/year/2023/poster_v-vis-posters-1094.html" target="_blank" class="image"><img src="images/debatevis.jpg" alt="" /></a>
+												<a href="https://content.ieeevis.org/year/2023/poster_v-vis-posters-1094.html" target="_blank" class="image"><img src="images/debatevis.JPG" alt="" /></a>
 												<h3>Towards Better Understanding: Proposing Effective Visualization Methods for Analyzing Argument in Debate</h3>
 												<p>Kwanghyuk Moon, <strong>Hyoji Ha</strong> and Kyungwon Lee. Poster Abstract, IEEE VIS2023. IEEE (October, 2023) </p>
 												<ul class="actions">
