--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 										<ul class="actions">
 											<li><a href="Hyoji Ha_CV.pdf" class="button big">CV</a></li>
 											<li><a href="CV(KOR)_Hyoji Ha.pdf" class="button big">CV(KOR)</a></li>
+											<li><a href="https://cgxr.sogang.ac.kr/" class="button big">CGXR Lab</a></li>
 										</ul>
 									</div>
 									<span class="image object">
