--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/Profile.jpg" alt="" />
+										<img src="images/Profile_2024.jpg" alt="" />
 									</span>
 								</section>
 
