--- a/index.html
+++ b/index.html
@@ -411,6 +411,14 @@
 									</header>
 									<div class="posts">
 								<article>
+									<a href="http://journal.cg-korea.org/archive/view_article?pid=jkcgs-30-3-87" target="_blank" class="image"><img src="images/2024kcgs.jpg" alt="" /></a>
+									<h3>An Extended Reality-based Data Visualization Supporting Heterogeneous Remote Collaboration</h3>
+									<p><strong>Hyoji Ha</strong>, Hyunwoo Kim, Yongseo Kim and Sanghun Park. Journal of the Korea Computer Graphics Society, 30(3). (July 2024):87-97.</p>
+									<ul class="actions">
+										<li><a href="files/2024kcgs.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
 									<a href="https://www.koreascience.or.kr/article/JAKO201616556377467.page" target="_blank" class="image"><img src="images/2016kiise.jpg" alt="" /></a>
 									<h3>A Study on Visualization Methods of Semantic Clustering for Multidimensional data</h3>
 									<p><strong>Hyoji Ha</strong>, Hyunwoo Han, Sungyun Bae, Jihye Lee, Sangjoon Son, Changhyung Hong, Hyunjung Shin and Kyungwon Lee. Journal of Communications of KIISE, 34(11). (November 2016):51-61.</p>
