--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 											<span class="icon solid fa-flask"></span>
 											<div class="content">
 												<h3>Co-I in National Research Foundation of Korea(NRF) grant funded by the Korea government(MSIT)</h3>
-												<p>Research on the development direction of police metaverse platform for digital scientific policing, Sogang University, South Korea (2023~)</p>
+												<p>Research on the development direction of police metaverse platform for digital scientific policing, Sogang University, South Korea (2023~2024)</p>
 											</div>
 										</article>
 										<article>
@@ -184,7 +184,7 @@
 										<article>
 											<a href="https://journals.sagepub.com/doi/10.1177/14738716241228593" target="_blank" class="image"><img src="images/metaphorvis.jpg" alt="" /></a>
 											<h3>An exploration system to effectively analyze the visual metaphor used in sentiment visualization</h3>
-											<p><strong>Hyoji Ha</strong>, Kwanghyuk Moon, Hyerim Joung, Hyegyeong Kim and Kyungwon Lee. Information Visualization(SCIE), 23(2). (April 2024):102924.</p>
+											<p><strong>Hyoji Ha</strong>, Kwanghyuk Moon, Hyerim Joung, Hyegyeong Kim and Kyungwon Lee. Information Visualization(SCIE), 23(2). (February 2024):102924.</p>
 											<ul class="actions">
 												<li><a href=" https://github.com/hm00081/metaphorVis" target="_blank" class="button">System Link</a></li>
 												<li><a href="https://www.youtube.com/watch?v=XLNXB8RLWTI" target="_blank" class="button">Video</a></li>
