--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>HYOJI HA</strong>'s research</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://scholar.google.com/citations?hl=ko&user=RNZVkykAAAAJ" class="icon brands fa-google"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
