--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Background & Research Career</h2>
+										<h2>Background & Research/Education Career</h2>
 									</header>
 									<div class="features">
 										<article>
