--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 										<ul class="actions">
 											<li><a href="Hyoji Ha_CV.pdf" class="button big">CV</a></li>
-											<li><a href="CV_KOR_HYOJIHA.pdf" class="button big">CV(KOR)</a></li>
+											<li><a href="CV_HYOJIHA_240923.pdf" class="button big">CV(KOR)</a></li>
 											<li><a href="https://cgxr.sogang.ac.kr/" class="button big">CGXR Lab</a></li>
 										</ul>
 									</div>
