--- a/index.html
+++ b/index.html
@@ -479,43 +479,20 @@
 								<article>
 									<a href="https://patents.google.com/patent/US10818066B2/en" target="_blank" class="image"><img src="images/2020patent.jpg" alt="" /></a>
 									<h3>Visualization method and device for multi-dimensional data analysis</h3>
-									<p>Kyungwon Lee, <strong>Hyoji Ha</strong>, Hyunwoo Han, Sungyun Bae, Jihye Lee, Changhyung Hong, Sangjoon Son and Hyunjung Shin. Journal of the Korea Society of Computer and Information, 21(5). (May 2016):19-29.</p>
+									<p>Kyungwon Lee, <strong>Hyoji Ha</strong>, Hyunwoo Han, Sungyun Bae, Jihye Lee, Changhyung Hong, Sangjoon Son and Hyunjung Shin. Publication of US10818066B2, USPTO. (October 2020).</p>
 									<ul class="actions">
 										<li><a href="files/2020US10818066.pdf" target="_blank" class="button">Download PDF</a></li>
 									</ul>
 								</article>
 								<article>
-									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865993" target="_blank" class="image"><img src="images/2015dcs.jpg" alt="" /></a>
-									<h3>Proximity based Circular Visualization for similarity analysis of voting patterns between nations in UN General Assembly</h3>
-									<p>Hanmin Choi, Seongmin Mun, <strong>Hyoji Ha</strong> and Kyungwon Lee. Design convergence study, 14(4). (August 2015):133-150. </p>
+									<a href="https://patents.google.com/patent/KR101955421B1/ko" target="_blank" class="image"><img src="images/KR101955421B1.jpg" alt="" /></a>
+									<h3>VISUALIZATION METHOD AND APPARATUS FOR MULTI-DIMENSIONAL DATA</h3>
+									<p>Kyungwon Lee, <strong>Hyoji Ha</strong>, Hyunwoo Han, Sungyun Bae, Jihye Lee, Changhyung Hong, Sangjoon Son and Hyunjung Shin. Publication of KR101955421B1, KIPO. (February 2019). </p>
 									<ul class="actions">
-										<li><a href="files/2015dcs.pdf" target="_blank" class="button">Download PDF</a></li>
+										<li><a href="files/KR101955421B1.pdf" target="_blank" class="button">Download PDF</a></li>
 									</ul>
 								</article>
-								<article>
-									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865998" target="_blank" class="image"><img src="images/2015dcs2.jpg" alt="" /></a>
-									<h3>Relationship Analysis between the Box Office Performance and Sentimental Words in Movie Review</h3>
-									<p>Seongmin Mun, <strong>Hyoji Ha</strong> and Kyungwon Lee. Design convergence study, 14(4). (August 2015):1-16. </p>
-									<ul class="actions">
-										<li><a href="files/2015dcs2.pdf" target="_blank" class="button">Download PDF</a></li>
-									</ul>
-								</article>
-								<article>
-									<a href="https://www.dbpia.co.kr/Journal/articleDetail?nodeId=NODE08865974" target="_blank" class="image"><img src="images/2014dcs.jpg" alt="" /></a>
-									<h3>A Visual Analysis on Factors Affecting Repurchase Intention in Social Commerce -Focused on Group-buying Social Commerce-</h3>
-									<p>Seongmin Mun, Hyunwoo Han <strong>Hyoji Ha</strong> and Kyungwon Lee. Design convergence study, 13(6). (December 2014):137-152. </p>
-									<ul class="actions">
-										<li><a href="files/2014dcs.pdf" target="_blank" class="button">Download PDF</a></li>
-									</ul>
-								</article>
-								<article>
-									<a href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE02500530" target="_blank" class="image"><img src="images/2014hci.jpg" alt="" /></a>
-									<h3>A news visualization based on an algorithm by journalistic values</h3>
-									<p>Daemin Park, Gi-Nam Kim, Nam-Yong Kang, Bongwon Suh, <strong>Hyoji Ha</strong> and Byung-Won On. Journal of the HCI Korea Society, 9(2). (November 2014): 5-12. </p>
-									<ul class="actions">
-										<li><a href="files/2014hci.pdf" target="_blank" class="button">Download PDF</a></li>
-									</ul>
-								</article>
+								
 							</div>
 						</section>
 
