--- a/index.html
+++ b/index.html
@@ -475,6 +475,39 @@
 									</ul>
 								</article>
 							</div>
+					</section>
+								<!--PT Section -->
+							<section>
+										<header class="major">
+											<h2>Patent</h2>
+										</header>
+										<div class="posts">
+								<article>
+									<a href="https://patents.google.com/patent/US12073185B2/en" target="_blank" class="image"><img src="images/2024patent.jpg" alt="" /></a>
+									<h3>Method and device of segmenting topics of content</h3>
+									<p>Jaejong Ho, Kyungwon Lee and <strong>Hyoji Ha</strong>. Publication of US12073185B2, USPTO. (August 2024).</p>
+									<ul class="actions">
+										<li><a href="files/2024US12073185.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="https://patents.google.com/patent/US10818066B2/en" target="_blank" class="image"><img src="images/2020patent.jpg" alt="" /></a>
+									<h3>Visualization method and device for multi-dimensional data analysis</h3>
+									<p>Kyungwon Lee, <strong>Hyoji Ha</strong>, Hyunwoo Han, Sungyun Bae, Jihye Lee, Changhyung Hong, Sangjoon Son and Hyunjung Shin. Publication of US10818066B2, USPTO. (October 2020).</p>
+									<ul class="actions">
+										<li><a href="files/2020US10818066.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="https://patents.google.com/patent/KR101955421B1/ko" target="_blank" class="image"><img src="images/KR101955421B1.jpg" alt="" /></a>
+									<h3>VISUALIZATION METHOD AND APPARATUS FOR MULTI-DIMENSIONAL DATA</h3>
+									<p>Kyungwon Lee, <strong>Hyoji Ha</strong>, Hyunwoo Han, Sungyun Bae, Jihye Lee, Changhyung Hong, Sangjoon Son and Hyunjung Shin. Publication of KR101955421B1, KIPO. (February 2019). </p>
+									<ul class="actions">
+										<li><a href="files/KR101955421B1.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
+								
+							</div>
 						</section>
 
 						</div>
