--- a/index.html
+++ b/index.html
@@ -508,6 +508,14 @@
 										<li><a href="files/1017308830000.pdf" target="_blank" class="button">Download PDF</a></li>
 									</ul>
 								</article>
+								 <article>
+									<a href="https://patents.google.com/patent/KR101602898B1/ko" target="_blank" class="image"><img src="images/KR101602898B1.jpg" alt="" /></a>
+									<h3>DATA VISUALIZATION METHOD AND SYSTEM USING COMMENT DATA FOR OBJECTS</h3>
+									<p>Kyungwon Lee, Gi-nam Kim, <strong>Hyoji Ha</strong>. Publication of KR101602898B1, KIPO. (March 2016). </p>
+									<ul class="actions">
+										<li><a href="files/KR101602898B1.pdf" target="_blank" class="button">Download PDF</a></li>
+									</ul>
+								</article>
 								
 							</div>
 						</section>
